Fix css flex on the container for alignment

--- a/Color-Picker/src/index.css
+++ b/Color-Picker/src/index.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
 }
 .container {
-  border: 2px solid rgb(224, 237, 243);
+  border: 2px solid rgb(250, 250, 250);
   width: 500px;
   max-height: 80vh;
   place-items: center;
@@ -12,9 +12,11 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 10px;
 }
 input[type="color"] {
   width: 50%;
+  background: none;
 
   margin-top: 1.5rem;
 }
@@ -26,7 +28,7 @@ label {
 }
 .box {
   margin-top: 1rem;
-  border: 1px solid black;
+  border: 2px solid black;
   width: 200px;
   height: 200px;
 }
